# bob

./: README.md  install.sh  main.py  pyproject.toml
pilot_agent/: cli.py
pilot_agent/gates/: approval.py
pilot_agent/llm/: provider.py
pilot_agent/loop/: agent.py
pilot_agent/mcp/: client.py
pilot_agent/ui/: repl.py
