[project]
name = "bob"
version = "0.1.0"
description = "bob — AI agent for pilot. Deploy and manage your infrastructure in plain language."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Mouhamed SYLLA", email = "mouhamedsylla@github.com" }]
requires-python = ">=3.12"
keywords = ["devops", "ai-agent", "infrastructure", "pilot", "llm", "bob"]
dependencies = [
    "anyio>=4.0.0",
    "litellm>=1.83.0,<2.0.0",
    "mcp>=1.0.0",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.scripts]
bob = "pilot_agent.cli:app"

[project.urls]
Repository = "https://github.com/mouhamedsylla/bob"
Issues     = "https://github.com/mouhamedsylla/bob/issues"

[tool.hatch.build.targets.wheel]
packages = ["pilot_agent"]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# En CI, utilise : uv sync --require-hashes
# pour vérifier l'intégrité SHA-256 de chaque dépendance.
# Protège contre les attaques supply-chain (ex: litellm 1.82.7/1.82.8).
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
